style.css
body {
    background-color: rgba(229, 238, 255, 0.885);
}


h1 {
    margin-right: 10px;
    display: inline-block;
}
.top {
    background-color: rgb(0, 0, 0);
    display: grid;
    grid-template-columns: 1fr 1.5fr 1fr;
    grid-template-rows: 0.1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    color: white;
    }

    .div1 {
        grid-area: 1 / 2 / 2 / 3;
    }
    .div2 {
        grid-area: 1 / 3 / 2 / 4;
        display: flex;
        align-items: right;
        justify-content: right;
        margin: 30px;
    }
    

.content {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    }
    
    .div3 { grid-area: 1 / 1 / 2 / 2; }
    .div4 { grid-area: 2 / 1 / 3 / 2; }
    
.center {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100%;
    margin: 0;
}




h1 {
  text-align: center;
  color: white;
  text-transform: uppercase;
  padding: 1px;
  font-family: serif;
  font-weight: 100;
  position: relative;
  width: 100%;
  background: linear-gradient(to right, black, #eee, black);
  white-space: nowrap;
}
h1::before {
  content: "";
  position: absolute;
  left: 50%;
  top: -50px;
  width: 600px;
  margin-left: -300px;
  margin-top: -220px;
  height: 600px;
  background: radial-gradient(ellipse closest-side, #444);
  z-index: -1;
}
h1 a {
  background: black;
  display: block;
  padding: 30px;
  text-decoration: none;
  letter-spacing: 30px;
  color: white;
  animation: comein 1.5s 1 ease-in-out forwards;
}

@keyframes comein {
  0% {
    letter-spacing: 80px;
    color: rgba(255, 255, 255, 0);
  }
  70% {
    letter-spacing: 20px;
  }
  100% {
    letter-spacing: 25px;
    color: rgba(255, 255, 255, 1);
  }
}








.btn {
    line-height: 38px;
    height: 55px;
    width: 250px;
    cursor: pointer;
}


.login {
  color: #FFF;
  transition: all 0.5s;
  position: relative;
}
.login::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.404);
  transition: all 0.3s;
  border-radius:15px;
}
.login:hover::before {
  opacity: 0 ;
  transform: scale(0.5,0.5);
}
.login::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all 0.3s;
  border: 1px solid rgba(251, 251, 251, 0.964);
  transform: scale(1.2,1.2);
  border-radius:15px;
  color: white;
}
.login:hover::after {
  opacity: 01;
  transform: scale(1,1);
}

